Update Firebase database URL in index.html

--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
         const firebaseConfig = {
             apiKey: "DEIN_API_KEY",
             authDomain: "DEIN_PROJECT_ID.firebaseapp.com",
-            databaseURL: "https://DEIN_PROJECT_ID-default-rtdb.firebaseio.com",
+            databaseURL: "https://umfrage-v-default-rtdb.europe-west1.firebasedatabase.app/",
             projectId: "DEIN_PROJECT_ID",
             storageBucket: "DEIN_PROJECT_ID.appspot.com",
             messagingSenderId: "DEINE_SENDER_ID",
